fix: make the caption under main blogpost image display properly
Before the text overlapped the photo

--- a/src/app/blog/[slug]/components/PostHeader.css
+++ b/src/app/blog/[slug]/components/PostHeader.css
@@ -13,5 +13,6 @@
     justify-content: flex-end;
     font-size: .5em;
     color: gray;
-    margin-top: -4px;
+    margin-top: 2px;
+    font-style: italic;
 }
